--- a/BayercraftApp/BayercraftApp/UCBacketCart.resx
+++ b/BayercraftApp/BayercraftApp/UCBacketCart.resx
@@ -117,20 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="icons8-wheel-80" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icons8-wheel-80.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="icons8-delete-20" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icons8-delete-20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="icons8-unsplash-80" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icons8-unsplash-80.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="1utSDPQkX6E" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\1utSDPQkX6E.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="icons8-edit-property-20" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icons8-edit-property-20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="rtbDescription.Text" xml:space="preserve">
+    <value>sdfsdfsd sdf sfsd f sdfsd sdfsf sdf sdfs fsdf sdf sdfs dfs sdf sfsd fsd fsd fsdf sdfsd sdf ssd fsd f sdfsdfsd sdf sfsd f sdfsd sdfsf sdf sdfs fsdf sdf sdfs dfs sdf sfsd fsd fsd fsdf sdfsd sdfsdfsd sdf sfsd f sdfsd sdfsf sdf sdfs fsdf sdf sdfs dfs sdf sfsd fsd fsd fsdf sdfsd sdfsdfsd sdf sfsd f sdfsd sdfsf sdf sdfs fsdf sdf sdfs dfs sdf sfsd fsd fsd fsdf sdfsd sdfsdfsd sdf sfsd f sdfsd sdfsf sdf sdfs fsdf sdf sdfs dfs sdf sfsd fsd fsd fsdf sdfsd </value>
   </data>
 </root>
